--- a/producto.html
+++ b/producto.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/animation.css" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Brand</title>
+    <title>Producto</title>
 </head>
 
 <body>
